err/robotice.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robotice'...
Listing './lib/python3.5/site-packages/robotice/api'...
Listing './lib/python3.5/site-packages/robotice/api/v1'...
Compiling './lib/python3.5/site-packages/robotice/api/v1/base.py'...
***   File "./lib/python3.5/site-packages/robotice/api/v1/base.py", line 89
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/api/v1/devices.py'...
***   File "./lib/python3.5/site-packages/robotice/api/v1/devices.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/api/v1/plans.py'...
***   File "./lib/python3.5/site-packages/robotice/api/v1/plans.py", line 49
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/api/v1/systems.py'...
***   File "./lib/python3.5/site-packages/robotice/api/v1/systems.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/bin'...
Compiling './lib/python3.5/site-packages/robotice/bin/robotice.py'...
***   File "./lib/python3.5/site-packages/robotice/bin/robotice.py", line 114
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/common'...
Compiling './lib/python3.5/site-packages/robotice/common/exception.py'...
***   File "./lib/python3.5/site-packages/robotice/common/exception.py", line 90
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/conf'...
Compiling './lib/python3.5/site-packages/robotice/conf/conf.py'...
***   File "./lib/python3.5/site-packages/robotice/conf/conf.py", line 83
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/conf/managers'...
Compiling './lib/python3.5/site-packages/robotice/conf/managers/actions.py'...
***   File "./lib/python3.5/site-packages/robotice/conf/managers/actions.py", line 71
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/conf/shell.py'...
***   File "./lib/python3.5/site-packages/robotice/conf/shell.py", line 119
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/monitor'...
Compiling './lib/python3.5/site-packages/robotice/monitor/tasks.py'...
***   File "./lib/python3.5/site-packages/robotice/monitor/tasks.py", line 47
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/outputs'...
Listing './lib/python3.5/site-packages/robotice/planner'...
Compiling './lib/python3.5/site-packages/robotice/planner/shell.py'...
***   File "./lib/python3.5/site-packages/robotice/planner/shell.py", line 95
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robotice/reactor'...
Listing './lib/python3.5/site-packages/robotice/reactor/actuators'...
Compiling './lib/python3.5/site-packages/robotice/reactor/shell.py'...
***   File "./lib/python3.5/site-packages/robotice/reactor/shell.py", line 139
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotice/reactor/tasks.py'...
***   File "./lib/python3.5/site-packages/robotice/reactor/tasks.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/reasoner'...
Listing './lib/python3.5/site-packages/robotice/reasoner/comparators'...
Compiling './lib/python3.5/site-packages/robotice/reasoner/tasks.py'...
***   File "./lib/python3.5/site-packages/robotice/reasoner/tasks.py", line 42
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/shell.py'...
***   File "./lib/python3.5/site-packages/robotice/shell.py", line 102
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/test'...
Listing './lib/python3.5/site-packages/robotice/test/conf'...
Listing './lib/python3.5/site-packages/robotice/test/tests'...
Listing './lib/python3.5/site-packages/robotice/test/tests/drivers'...
Listing './lib/python3.5/site-packages/robotice/test/tests/monitor'...
Listing './lib/python3.5/site-packages/robotice/test/tests/reactor'...
Listing './lib/python3.5/site-packages/robotice/test/tests/utils'...
Listing './lib/python3.5/site-packages/robotice/utils'...
Listing './lib/python3.5/site-packages/robotice/utils/backends'...
Compiling './lib/python3.5/site-packages/robotice/utils/backends/redis.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/backends/redis.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/utils/celery.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/celery.py", line 28
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/utils/conf.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/conf.py", line 21
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/utils/database.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/database.py", line 18
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/utils/extensions'...
Listing './lib/python3.5/site-packages/robotice/utils/extensions/comparators'...
Listing './lib/python3.5/site-packages/robotice/utils/extensions/comparators/fuzzy'...
Compiling './lib/python3.5/site-packages/robotice/utils/extensions/comparators/fuzzy/base.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/extensions/comparators/fuzzy/base.py", line 63
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/utils/extensions/comparators/fuzzy/test.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/extensions/comparators/fuzzy/test.py", line 15
    print "input: %s output: %s" % (x,system.calculate(sensor_output, output)["action"])
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/utils/functional.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/functional.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotice/utils/output.py'...
***   File "./lib/python3.5/site-packages/robotice/utils/output.py", line 22
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotice/utils/platform'...
Listing './lib/python3.5/site-packages/robotice/utils/platform/bb'...
Listing './lib/python3.5/site-packages/robotice/utils/platform/rpi'...
Listing './lib/python3.5/site-packages/robotice-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
